--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,3 @@
-#Redirect for CORS Preflight request
-RewriteCond %{REQUEST_METHOD} OPTIONS
-RewriteRule ^(.*)$ $1 [R=200,L]
-#Set headers to access CORS Requests / allowing localhost only
-Header always add Access-Control-Allow-Origin "*"
-Header always add Access-Control-Allow-Headers "origin, x-requested-with, content-type, authorization"
-Header always add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 # Disable directory browsing
 Options -Indexes
 
@@ -17,13 +10,14 @@ Options -Indexes
 <IfModule mod_rewrite.c>
 	Options +FollowSymlinks
 	RewriteEngine On
-	#Redirect for CORS Preflight request
-RewriteCond %{REQUEST_METHOD} OPTIONS
-RewriteRule ^(.*)$ $1 [R=200,L]
-#Set headers to access CORS Requests / allowing localhost only
-Header always add Access-Control-Allow-Origin "*"
-Header always add Access-Control-Allow-Headers "origin, x-requested-with, content-type, authorization"
-Header always add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
+	
+	# #Redirect for CORS Preflight request
+	# RewriteCond %{REQUEST_METHOD} OPTIONS
+	# RewriteRule ^(.*)$ $1 [R=200,L]
+	# #Set headers to access CORS Requests / allowing localhost only
+	# Header always add Access-Control-Allow-Origin "*"
+	# Header always add Access-Control-Allow-Headers "origin, x-requested-with, content-type, authorization"
+	# Header always add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 
 	# If you installed CodeIgniter in a subfolder, you will need to
 	# change the following line to match the subfolder you need.
